--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
   </div><!--/lit-part--><!--/lit-part-->
       </rocket-header-scroll-menu>
     <!--/lit-part-->
-        <!--lit-part UNbWrd8S5FY=--><main><!--lit-part--><!--lit-part v/zM/NNqmiM=--><div class="parallax">
+        <!--lit-part UNbWrd8S5FY=--><main><!--lit-part--><!--lit-part fwykLKEKpQE=--><div class="parallax">
   <div class="parallax__layer parallax__layer--back darksoil-background"></div>
   <div class="parallax__layer parallax__layer--base">
     <rocket-content-area style="padding-top: 20px"><template shadowroot="open" shadowrootmode="open"><style>
@@ -810,7 +810,12 @@
     <!--/lit-part--></a></template></custom-social-link>
             </div>
           </div>
-          <p class="poem">collective purchasing of food</p>
+          <p class="poem">
+          if you look after the worms<br>
+          we’ll support you supporting the germs<br>
+          soil into food, feeding you, feeding me<br>
+          delicious meals for my family<br>
+          </p>
           <p>
             plenty is a peer-to-peer app to manage food buyers clubs, so that eating amazing food from locally sourced producers becomes joyful, easy and cheap.
           </p>
