--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
   </div><!--/lit-part--><!--/lit-part-->
       </rocket-header-scroll-menu>
     <!--/lit-part-->
-        <!--lit-part UNbWrd8S5FY=--><main><!--lit-part--><!--lit-part fwykLKEKpQE=--><div class="parallax">
+        <!--lit-part UNbWrd8S5FY=--><main><!--lit-part--><!--lit-part xdfx/YhHwWE=--><div class="parallax">
   <div class="parallax__layer parallax__layer--back darksoil-background"></div>
   <div class="parallax__layer parallax__layer--base">
     <rocket-content-area style="padding-top: 20px"><template shadowroot="open" shadowrootmode="open"><style>
@@ -472,6 +472,191 @@
         }
       }
     </style><!--lit-part tgsi20BuArw=--> <slot id="content"></slot> <!--/lit-part--></template>
+        <div>
+          <rocket-card><template shadowroot="open" shadowrootmode="open"><style>
+      :host {
+        margin-bottom: 5rem;
+        padding: 3rem 1rem;
+        border: 1px solid #9fa3ae;
+        border-radius: 20px;
+        background-color: #ffffff;
+        text-align: center;
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        min-width: 0;
+        word-wrap: break-word;
+        background-color: #fff;
+        background-clip: border-box;
+        min-width: 20ch;
+      }
+    </style><!--lit-part LRZXgDQ2Npw=-->
+      <slot name="title"></slot>
+      <slot></slot>
+      <slot name="cta"></slot>
+    <!--/lit-part--></template>
+            <div slot="title" class="row card-title">
+              <h4>p2p Shipyard</h4>
+              <div class="row">
+                <custom-social-link style="
+                    margin-left: 16px;
+                    --primary-text-color: white;
+                    --primary-color: var(white);
+                  " name="readthedocs" url="https://darksoil.studio/p2p-shipyard"><template shadowroot="open" shadowrootmode="open"><style>
+      :host {
+        display: block;
+        width: 30px;
+        height: 30px;
+        margin-right: 15px;
+      }
+      svg {
+        color: var(--primary-text-color);
+        transition: color 0.3s ease-in-out;
+      }
+      svg:hover {
+        color: var(--primary-color);
+      }
+      .sr-only {
+        position: absolute;
+        left: -10000px;
+        top: auto;
+        width: 1px;
+        height: 1px;
+        overflow: hidden;
+      }
+      :host([dark-background]) svg {
+        color: #fff;
+      }
+      :host([dark-background]) svg:hover {
+        color: var(--primary-text-color);
+      }
+    </style><!--lit-part INm/5Wg+P5I=-->
+      <!--lit-node 0--><a class="social-link" href="https://darksoil.studio/p2p-shipyard" aria-label=" on readthedocs" rel="noopener noreferrer" target="_blank" slot="social">
+        <span class="sr-only"><!--lit-part-->readthedocs<!--/lit-part--></span>
+        <!--lit-node 3--><img src="https://cdn.simpleicons.org/readthedocs/white" <="" a="">
+    <!--/lit-part--></a></template></custom-social-link>
+                <custom-social-link style="
+                    --primary-text-color: white;
+                    --primary-color: var(white);
+                  " name="substack" url="https://darksoil.substack.com/p/1a72fe01-304f-46cc-b44c-99ea3bb7e830"><template shadowroot="open" shadowrootmode="open"><style>
+      :host {
+        display: block;
+        width: 30px;
+        height: 30px;
+        margin-right: 15px;
+      }
+      svg {
+        color: var(--primary-text-color);
+        transition: color 0.3s ease-in-out;
+      }
+      svg:hover {
+        color: var(--primary-color);
+      }
+      .sr-only {
+        position: absolute;
+        left: -10000px;
+        top: auto;
+        width: 1px;
+        height: 1px;
+        overflow: hidden;
+      }
+      :host([dark-background]) svg {
+        color: #fff;
+      }
+      :host([dark-background]) svg:hover {
+        color: var(--primary-text-color);
+      }
+    </style><!--lit-part INm/5Wg+P5I=-->
+      <!--lit-node 0--><a class="social-link" href="https://darksoil.substack.com/p/1a72fe01-304f-46cc-b44c-99ea3bb7e830" aria-label=" on substack" rel="noopener noreferrer" target="_blank" slot="social">
+        <span class="sr-only"><!--lit-part-->substack<!--/lit-part--></span>
+        <!--lit-node 3--><img src="https://cdn.simpleicons.org/substack/white" <="" a="">
+    <!--/lit-part--></a></template></custom-social-link>
+                <custom-social-link style="
+                    --primary-text-color: white;
+                    --primary-color: var(white);
+                  " name="Github" url="https://github.com/darksoil-studio/p2p-shipyard"><template shadowroot="open" shadowrootmode="open"><style>
+      :host {
+        display: block;
+        width: 30px;
+        height: 30px;
+        margin-right: 15px;
+      }
+      svg {
+        color: var(--primary-text-color);
+        transition: color 0.3s ease-in-out;
+      }
+      svg:hover {
+        color: var(--primary-color);
+      }
+      .sr-only {
+        position: absolute;
+        left: -10000px;
+        top: auto;
+        width: 1px;
+        height: 1px;
+        overflow: hidden;
+      }
+      :host([dark-background]) svg {
+        color: #fff;
+      }
+      :host([dark-background]) svg:hover {
+        color: var(--primary-text-color);
+      }
+    </style><!--lit-part INm/5Wg+P5I=-->
+      <!--lit-node 0--><a class="social-link" href="https://github.com/darksoil-studio/p2p-shipyard" aria-label=" on Github" rel="noopener noreferrer" target="_blank" slot="social">
+        <span class="sr-only"><!--lit-part-->Github<!--/lit-part--></span>
+        <!--lit-node 3--><img src="https://cdn.simpleicons.org/github/white" <="" a="">
+    <!--/lit-part--></a></template></custom-social-link>
+                <custom-social-link style="
+                    --primary-text-color: white;
+                    --primary-color: var(white);
+                  " name="OpenCollective" url="https://opencollective.com/darksoil/projects/p2p-shipyard"><template shadowroot="open" shadowrootmode="open"><style>
+      :host {
+        display: block;
+        width: 30px;
+        height: 30px;
+        margin-right: 15px;
+      }
+      svg {
+        color: var(--primary-text-color);
+        transition: color 0.3s ease-in-out;
+      }
+      svg:hover {
+        color: var(--primary-color);
+      }
+      .sr-only {
+        position: absolute;
+        left: -10000px;
+        top: auto;
+        width: 1px;
+        height: 1px;
+        overflow: hidden;
+      }
+      :host([dark-background]) svg {
+        color: #fff;
+      }
+      :host([dark-background]) svg:hover {
+        color: var(--primary-text-color);
+      }
+    </style><!--lit-part INm/5Wg+P5I=-->
+      <!--lit-node 0--><a class="social-link" href="https://opencollective.com/darksoil/projects/p2p-shipyard" aria-label=" on OpenCollective" rel="noopener noreferrer" target="_blank" slot="social">
+        <span class="sr-only"><!--lit-part-->OpenCollective<!--/lit-part--></span>
+        <!--lit-node 3--><img src="https://cdn.simpleicons.org/opencollective/white" <="" a="">
+    <!--/lit-part--></a></template></custom-social-link>
+              </div>
+            </div>
+            <p class="poem">
+              Get your apps shipped out with ease<br>
+              Peer to peer for all? Yes please!
+            </p>
+            <p>
+              The p2p Shipyard is a toolset to ship cross-platform p2p apps. It
+              enables holochain apps to target mobile! We are in the process of
+              raising funds for it through a retroactive crowdfunding. Learn
+              more about it <a href="">here!</a>
+            </p>
+          </rocket-card>
+        </div>
         <div>
           <rocket-card><template shadowroot="open" shadowrootmode="open"><style>
       :host {
@@ -772,10 +957,7 @@
         <span class="sr-only"><!--lit-part-->Github<!--/lit-part--></span>
         <!--lit-node 3--><img src="https://cdn.simpleicons.org/github/white" <="" a="">
     <!--/lit-part--></a></template></custom-social-link>
-              <custom-social-link style="
-                  --primary-text-color: white;
-                  --primary-color: var(white);
-                " name="OpenCollective" url="https://opencollective.com/darksoil/projects/plenty"><template shadowroot="open" shadowrootmode="open"><style>
+              <custom-social-link style="--primary-text-color: white; --primary-color: var(white)" name="OpenCollective" url="https://opencollective.com/darksoil/projects/plenty"><template shadowroot="open" shadowrootmode="open"><style>
       :host {
         display: block;
         width: 30px;
@@ -811,13 +993,15 @@
             </div>
           </div>
           <p class="poem">
-          if you look after the worms<br>
-          we’ll support you supporting the germs<br>
-          soil into food, feeding you, feeding me<br>
-          delicious meals for my family<br>
+            if you look after the worms<br>
+            we’ll support you supporting the germs<br>
+            soil into food, feeding you, feeding me<br>
+            delicious meals for my family<br>
           </p>
           <p>
-            plenty is a peer-to-peer app to manage food buyers clubs, so that eating amazing food from locally sourced producers becomes joyful, easy and cheap.
+            plenty is a peer-to-peer app to manage food buyers clubs, so that
+            eating amazing food from locally sourced producers becomes joyful,
+            easy and cheap.
           </p>
         </rocket-card>
 
@@ -1316,7 +1500,6 @@
             agency in the world.
           </p>
         </rocket-card>
-
       </rocket-columns>
     </rocket-content-area>
 
