--- a/site/pages/index.rocket.html
+++ b/site/pages/index.rocket.html
@@ -120,6 +120,58 @@ export async function registerCustomElements() {
         <div>
           <rocket-card>
             <div slot="title" class="row card-title">
+              <h4>p2p Shipyard</h4>
+              <div class="row">
+                <custom-social-link
+                  style="
+                    margin-left: 16px;
+                    --primary-text-color: white;
+                    --primary-color: var(white);
+                  "
+                  name="readthedocs"
+                  url="https://darksoil.studio/p2p-shipyard"
+                ></custom-social-link>
+                <custom-social-link
+                  style="
+                    --primary-text-color: white;
+                    --primary-color: var(white);
+                  "
+                  name="substack"
+                  url="https://darksoil.substack.com/p/1a72fe01-304f-46cc-b44c-99ea3bb7e830"
+                ></custom-social-link>
+                <custom-social-link
+                  style="
+                    --primary-text-color: white;
+                    --primary-color: var(white);
+                  "
+                  name="Github"
+                  url="https://github.com/darksoil-studio/p2p-shipyard"
+                ></custom-social-link>
+                <custom-social-link
+                  style="
+                    --primary-text-color: white;
+                    --primary-color: var(white);
+                  "
+                  name="OpenCollective"
+                  url="https://opencollective.com/darksoil/projects/p2p-shipyard"
+                ></custom-social-link>
+              </div>
+            </div>
+            <p class="poem">
+              Get your apps shipped out with ease<br />
+              Peer to peer for all? Yes please!
+            </p>
+            <p>
+              The p2p Shipyard is a toolset to ship cross-platform p2p apps. It
+              enables holochain apps to target mobile! We are in the process of
+              raising funds for it through a retroactive crowdfunding. Learn
+              more about it <a href="">here!</a>
+            </p>
+          </rocket-card>
+        </div>
+        <div>
+          <rocket-card>
+            <div slot="title" class="row card-title">
               <h4>holochain playground</h4>
               <div class="row">
                 <custom-social-link
@@ -191,18 +243,22 @@ export async function registerCustomElements() {
                 url="https://github.com/darksoil-studio/plenty"
               ></custom-social-link>
               <custom-social-link
-                style="
-                  --primary-text-color: white;
-                  --primary-color: var(white);
-                "
+                style="--primary-text-color: white; --primary-color: var(white)"
                 name="OpenCollective"
                 url="https://opencollective.com/darksoil/projects/plenty"
               ></custom-social-link>
             </div>
           </div>
-          <p class="poem">collective purchasing of food</p>
+          <p class="poem">
+            if you look after the worms<br />
+            we’ll support you supporting the germs<br />
+            soil into food, feeding you, feeding me<br />
+            delicious meals for my family<br />
+          </p>
           <p>
-            plenty is a peer-to-peer app to manage food buyers clubs, so that eating amazing food from locally sourced producers becomes joyful, easy and cheap.
+            plenty is a peer-to-peer app to manage food buyers clubs, so that
+            eating amazing food from locally sourced producers becomes joyful,
+            easy and cheap.
           </p>
         </rocket-card>
 
@@ -404,7 +460,6 @@ export async function registerCustomElements() {
             agency in the world.
           </p>
         </rocket-card>
-
       </rocket-columns>
     </rocket-content-area>
 
