--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
   </div><!--/lit-part--><!--/lit-part-->
       </rocket-header-scroll-menu>
     <!--/lit-part-->
-        <!--lit-part UNbWrd8S5FY=--><main><!--lit-part--><!--lit-part xdfx/YhHwWE=--><div class="parallax">
+        <!--lit-part UNbWrd8S5FY=--><main><!--lit-part--><!--lit-part XKVr4HwKkdg=--><div class="parallax">
   <div class="parallax__layer parallax__layer--back darksoil-background"></div>
   <div class="parallax__layer parallax__layer--base">
     <rocket-content-area style="padding-top: 20px"><template shadowroot="open" shadowrootmode="open"><style>
@@ -538,7 +538,7 @@
                 <custom-social-link style="
                     --primary-text-color: white;
                     --primary-color: var(white);
-                  " name="substack" url="https://darksoil.substack.com/p/1a72fe01-304f-46cc-b44c-99ea3bb7e830"><template shadowroot="open" shadowrootmode="open"><style>
+                  " name="substack" url="https://darksoil.substack.com/p/introducing-the-p2p-shipyard"><template shadowroot="open" shadowrootmode="open"><style>
       :host {
         display: block;
         width: 30px;
@@ -567,7 +567,7 @@
         color: var(--primary-text-color);
       }
     </style><!--lit-part INm/5Wg+P5I=-->
-      <!--lit-node 0--><a class="social-link" href="https://darksoil.substack.com/p/1a72fe01-304f-46cc-b44c-99ea3bb7e830" aria-label=" on substack" rel="noopener noreferrer" target="_blank" slot="social">
+      <!--lit-node 0--><a class="social-link" href="https://darksoil.substack.com/p/introducing-the-p2p-shipyard" aria-label=" on substack" rel="noopener noreferrer" target="_blank" slot="social">
         <span class="sr-only"><!--lit-part-->substack<!--/lit-part--></span>
         <!--lit-node 3--><img src="https://cdn.simpleicons.org/substack/white" <="" a="">
     <!--/lit-part--></a></template></custom-social-link>
