--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
+    <title>darksoil studio</title>
   </head>
   <body>
     <!--a.class links-->
