image and utf fix

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     />
     <link rel="stylesheet" href="style.css" />
     <title>darksoil studio</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   </head>
   <body>
     <!--a.class links-->
@@ -397,7 +398,7 @@
           <rocket-columns>
             <rocket-card>
               <h4 slot="title">Viktor Zaunders</h4>
-              <img src="viktor.jpg" class="photo" />
+              <img src="viktor_circular.png" class="photo" />
               <p>
                 Viktor translates real world needs into application architectures.
                 <br /><br />
@@ -413,7 +414,7 @@
     
             <rocket-card>
               <h4 slot="title">Guillem Córdoba</h4>
-              <img src="guillem.jpg" class="photo" />
+              <img src="guillem_circular.png" class="photo" />
               <p>
                 Guillem writes exquisite code for our darksoil applications.
                 <br /><br />
@@ -434,7 +435,7 @@
           <rocket-columns>
             <rocket-card>
               <h4 slot="title">Eric Bear</h4>
-              <img src="bear.jpg" class="photo" />
+              <img src="bear_circular.png" class="photo" />
               <p>
                 Bear develops our team and business.
                 <br /><br />
