--- a/hc-intro/index.html
+++ b/hc-intro/index.html
@@ -64,7 +64,7 @@
         
         <rocket-content-area style="padding-top: 20px;">
           <h2 id="courses" link-text="courses">Developer training: Intro to Holochain</h2>
-          <h3>Learn how to design, develop, and deploy Holochain apps in 4 days with:</h3>
+          <h3>Learn how to design, develop, and deploy Holochain apps in two weeks with:</h3>
           <p> 
             <li style="font-size:larger;"><b>Interactive live sessions:</b> highly engaging learning format</li>
             <li style="font-size:larger;"><b>Taught by Guillem Cordoba:</b>  world esteemed teacher and developer</li>
@@ -91,7 +91,7 @@
               <p>At the end of the program, you can:
             <li style="font-size: 20px; text-align: left;">Make and distribute simple Holochain apps</li>
             <li style="font-size: 20px; text-align: left;">Work as a Holochain developer</li>
-            <li style="font-size: 20px; text-align: left;">Understand the fundaments of Holochain app architecture</li>
+            <li style="font-size: 20px; text-align: left;">Understand the basics of Holochain architecture</li>
           </p>
             </rocket-card>
           </rocket-columns>
@@ -114,7 +114,7 @@
           <h2>Details</h2>
           <rocket-columns>
             <rocket-card>
-              <p><b>Training dates: January x-x, 2025</b><br />
+              <p><b>Training dates: February 3-14, 2025</b><br />
               <p><b>Location: Online classroom (Zoom)</b><br />
               <p><b>Number of participants: 12</b><br />
               <p><b>Price: $2000</b><br />
@@ -145,25 +145,37 @@
           <h2>Course Details</h2>
           <rocket-columns>
             <rocket-card>
+              <h3 slot="title">Overview</h3>
+              <p>This training will run over the course of two weeks beginning on Monday the 3rd of February. </p>
+              <p>Each day has around <b>2 hours of theory</b> on zoom and then there are exercises to complete before the next session (expect around 2h for this depending on person and skill). </p>
+              <p>The live sessions will be held at: <br />
+              <b>8 am PST / 11 am EST / 6pm CEST</b> </p>
+              <p>After we have gone through all the theory, you get to practice it through implementing a small app (we provide a few different designs to choose from) in the hackathon days.</p>
+              <p>During the two weeks after the course we will give ongoing asynchronous support for students that are building things and at the end of these two weeks we also offer a live session where we answer any questions or considerations that might have come up in building. </p>
+            </rocket-card>
+          </rocket-columns>
+          <rocket-columns>
+            <rocket-card>
               <h3 slot="title">Schedule</h3>
-              <p>This training will run online over the course of x days.</p>
               <p>
-                Monday:<br />
-                9.00 - 10.30: Live session<br />
-                10.30 - 10.45: Break<br />
-                10:45 - 12.00: Live session<br />
-              </p>
-
-              <p>
-                Tuesday:<br />
-                9.00 - 10.30: Live session<br />
-                10.30 - 10.45: Break<br />
-                10:45 - 12.00: Live session<br />
+                February 3:	How does Holochain work?<br />
+                February 4:	Building basic Holochain apps<br />
+                February 5:	Queries and Capability tokens<br />
+                February 6:	Validation<br />
+                February 7:	Connecting from a UI<br />
+                <br />
+                February 10:	DNA - Modifiers and Clones<br />
+                February 11:	Ecosystem tooling & Hackathon start<br />
+                February 12:	Hackathon support session<br />
+                February 13:	Hackathon support session<br />
+                February 14:	Hackathon end & closing<br />
+                <br />
+                February 28	Progess Updates (Optional)<br />
               </p>
             
             </rocket-card>
           </rocket-columns>
-          <rocket-columns>
+          <!--<rocket-columns>
             <rocket-card>
             <h3 slot="title">Course topics</h3>
             <p>
@@ -176,7 +188,7 @@
               <li style="text-align: left;">Ecosystem overview (services, tooling & distribution)</li>
             </p>
           </rocket-card>
-        </rocket-columns>
+        </rocket-columns>-->
 
             <h2>Apply</h2>
             <rocket-columns>
