--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
                 <a href="http://agilelearningcenters.org/"
                   >Agile Learning Centers</a
                 >
-                and is the director of ecosystem growth at Holochain. <br /><br />
+                and was the director of ecosystem growth at Holochain. <br /><br />
                 Bear wants to be a good ant by fostering play, relationship and
                 agency in the world.
               </p>
