--- a/index.html
+++ b/index.html
@@ -16,15 +16,10 @@
     flex-direction: row;
     margin-top: 10px;
     align-items: center;">
-      <div style="flex: 1; display: flex; justify-content: left;">
-        <a href="#what-we-do">what we do</a>
-        <a href="#things-weve-made">things we've made</a>
-        <a href="#now_building">now building</a>
-        <a href="#approach">approach to software</a>
-        <a href="#projects_on_deck">projects on deck</a>
-        <a href="#work-with-us">work with us</a>
-        <a href="#people">people</a>
-        <a href="#connect">connect</a>
+      <div style="flex: 1; display: flex; justify-content: center;">
+        <a style="padding-left: 20px; padding-right: 20px;" href="#people">about</a>
+        <a style="padding-left: 20px; padding-right: 20px;" href="">training</a>
+        <a style="padding-left: 20px; padding-right: 20px;" href="#connect">contact</a>
       </div>
       <div
         class="custom-social-links"
