Support ticket, removed dates

--- a/index.html
+++ b/index.html
@@ -106,7 +106,6 @@
             Holochain Developer Training
           </h2>
           <p>Learn how to build Holochain apps in 2 weeks.</p>
-          <p>May 5 - 16</p>
           <a href="https://darksoil.studio/hc-dev-training/"
             ><div class="button">Learn more</div></a
           >
@@ -442,6 +441,12 @@
             <br />
             Contribute to projects through the
             <a href="https://opencollective.com/darksoil">open collective</a>.
+            <br />
+            <br />
+            Need help building holochain apps?
+            <a href="https://buy.stripe.com/00g03k0fQ6aG5pe9AD"
+              >Contact us to figure out the details and buy a support ticket</a
+            >.
           </p>
         </rocket-content-area>
 
