--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
           </rocket-columns>
         </rocket-content-area>
 
-        <rocket-content-area>
+        <!--<rocket-content-area>
           <h2 id="now_building" link-text="now building" class="area-headline">
             now building <br />
           </h2>
@@ -342,7 +342,7 @@
               </p>
             </rocket-card>
           </rocket-columns>
-        </rocket-content-area>
+        </rocket-content-area>-->
 
         <rocket-content-area>
           <h2 id="approach" link-text="approach to software">
@@ -459,8 +459,9 @@
           <rocket-columns>
             <rocket-card>
               <h4 slot="title">Viktor Zaunders</h4>
-              <img src="viktor_circular.png" class="photo" />
-              <p>
+              <img src="viktor_bw.png" class="photo" />
+              <p>CFO</p>
+              <!--<p>
                 Viktor translates real world needs into application
                 architectures.
                 <br /><br />
@@ -471,13 +472,14 @@
                 Viktor is motivated by the desire to create new ways of
                 organizing human collaboration so that he and his kids can much
                 more easily contribute to life creating conditions for life.
-              </p>
+              </p>-->
             </rocket-card>
 
             <rocket-card>
               <h4 slot="title">Guillem Córdoba</h4>
-              <img src="guillem_circular.png" class="photo" />
-              <p>
+              <img src="guillem_bw.png" class="photo" />
+              <p>CTO</p>
+              <!--<p>
                 Guillem writes exquisite code for our darksoil applications.
                 <br /><br />
                 He has been foundational for teaching the growing Holochain dev
@@ -493,14 +495,15 @@
                 Passionate about learning and teaching, Guillem is moved by a
                 desire to support the creative and collaborative side of all
                 people.
-              </p>
+              </p>-->
             </rocket-card>
           </rocket-columns>
           <rocket-columns>
             <rocket-card>
               <h4 slot="title">Eric Bear</h4>
-              <img src="bear_circular.png" class="photo" />
-              <p>
+              <img src="eric_bw.png" class="photo" />
+              <p>CEO</p>
+              <!--<p>
                 Bear develops our team and business.
                 <br /><br />
                 He is upholding strategies and connections internally and with
@@ -514,7 +517,7 @@
                 <br /><br />
                 Bear wants to be a good ant by fostering play, relationship and
                 agency in the world.
-              </p>
+              </p>-->
             </rocket-card>
           </rocket-columns>
         </rocket-content-area>
