update page with michael

--- a/index.html
+++ b/index.html
@@ -172,22 +172,7 @@
                       name="substack"
                       url="https://darksoil.substack.com/p/1a72fe01-304f-46cc-b44c-99ea3bb7e830"
                     ></custom-social-link>
-                    <custom-social-link
-                      style="
-                        --primary-text-color: white;
-                        --primary-color: var(white);
-                      "
-                      name="Github"
-                      url="https://github.com/darksoil-studio/p2p-shipyard"
-                    ></custom-social-link>
-                    <custom-social-link
-                      style="
-                        --primary-text-color: white;
-                        --primary-color: var(white);
-                      "
-                      name="OpenCollective"
-                      url="https://opencollective.com/darksoil/projects/p2p-shipyard"
-                    ></custom-social-link>
+
                   </div>
                 </div>
                 <p class="poem">
@@ -196,12 +181,10 @@
                 </p>
                 <p>
                   The p2p Shipyard is a toolset to ship cross-platform p2p apps.
-                  It enables holochain apps to target mobile! We are in the
-                  process of raising funds for it through a retroactive
-                  crowdfunding. Learn more about it
+                  It enables holochain apps to target mobile! <br /><br />
                   <a
-                    href="https://darksoil.substack.com/p/introducing-the-p2p-shipyard"
-                    >here!</a
+                    href="https://darksoil.studio/p2p-shipyard"
+                    >Go to the p2p Shipyard page</a
                   >
                 </p>
               </rocket-card>
@@ -519,7 +502,11 @@
                 more easily contribute to life creating conditions for life.
               </p>-->
             </rocket-card>
-            
+            <rocket-card>
+              <h4 slot="title">Michael Dougherty</h4>
+              <img src="michael_bw.png" class="photo" />
+              <p style="text-align: center;">Developer</p>
+            </rocket-card>
           </rocket-columns>
         </rocket-content-area>
 
