--- a/hc-intro-old/index.html
+++ b/hc-intro-old/index.html
@@ -24,7 +24,7 @@
         <a href="#projects_on_deck">projects on deck</a>
         <a href="#work-with-us">work with us</a>
         <a href="#people">people</a>
-        <a href="#connect">connect</a>-->
+        <a href="index.html#connect">connect</a>-->
       </div>
       <div
         class="custom-social-links"
