--- a/dash-chat.html
+++ b/dash-chat.html
@@ -64,7 +64,7 @@
 
       </div>
       <p>
-        Darksoil is working with the OTF UXD Lab to make sure our product meets the real needs on the ground right now
+        We’re conducting extensive user research and UI/UX design with Decent Design, supported by OTF’s User Experience and Discovery Lab. Our research carefully addresses specific needs, contexts, and user priorities, ensuring we develop technology transparently and responsibly.
       </p>
       <br />
       <p><a href="https://darksoil.studio/p2pmessenger/" class="button">Go to project site</a></p>
