--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <p>
               Community matchmaker.<br><br>
 
-              Edgy is a peer-to-peer, local-first AI matchmaking designed to help communities and events match needs, offers, and shared interests in real time. Whether it's conferences, teams, or residential communities, Edgy connects people around ideas, resources, and opportunities—without centralized gatekeepers.<br><br>
+              Corri is a peer-to-peer, local-first AI matchmaking designed to help communities and events match needs, offers, and shared interests in real time. Whether it's conferences, teams, or residential communities, Edgy connects people around ideas, resources, and opportunities—without centralized gatekeepers.<br><br>
 
               It's intelligent coordination for groups to discover and act on their potential.<br><br>
               <a href="corri.html">Go to Corri AI page</a>
