--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
       <h2 id="people">People</h2>
       <rocket-columns>
         <rocket-card>
-          <img src="eric_bw.png" class="photo" />
+          <img src="eric_bw_circle_smile.png" class="photo" />
           <h4 slot="title">Eric Bear</h4>
           <p style="text-align: center;">CEO</p>
         </rocket-card>
