--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
     />
     <link rel="stylesheet" href="style.css" />
     <title>Contact - darksoil studio</title>
+    <!-- Updated for GitHub Pages -->
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   </head>
   <body>
@@ -54,7 +55,7 @@
         or just have questions, feel free to reach out.
       </p>
 
-      <form class="contact-form" action="https://formspree.io/f/xzzvvnjn" method="POST">
+      <form class="contact-form" action="https://formspree.io/f/xzzvvnjn" method="POST" enctype="multipart/form-data">
         <div class="form-group">
           <label for="name">Name *</label>
           <input type="text" id="name" name="name" required>
